--- a/app/webroot/css/main-style-media.v4.css
+++ b/app/webroot/css/main-style-media.v4.css
@@ -70,11 +70,15 @@
         grid-template-rows: auto;
     }
     .list-view__price-col {
-        margin-left: 30px;
+        margin-left: 0;
     }
     .list-view__info-col .akb-polarity {
         display: flex;
         left: 83px;
+    }
+    .product__info-prices {
+        margin-left: -2px;
+        margin-top: 0;
     }
 }
 
@@ -378,7 +382,10 @@
         padding-top: 0;
     }
     .list-view__item {
-        grid-template-columns: auto 200px 180px;
+        grid-template-columns: auto 230px 180px;
+    }
+    .list-view__price-col {
+        margin-left: 30px;
     }
 }
 
@@ -447,7 +454,7 @@
         font-size: 10px;
     }
     .list-view__info-col .akb-polarity {
-        left: 160px;
+        left: 120px;
     }
     .boxList {
         width: 28.6%;
