--- a/app/webroot/css/main-style-media.v4.css
+++ b/app/webroot/css/main-style-media.v4.css
@@ -20,7 +20,7 @@
 }
 @media screen and (min-width: 550px) {
     .boxList {
-        width: 42%;
+        width: 41%
     }
     .selection .item {
         width: 45%;
@@ -48,7 +48,7 @@
         max-width: var(--container-md)
     }
     .boxList {
-        width: 27.3%;
+        width: 44%;
     }
     .width-disk {
         justify-content: flex-start;
@@ -70,11 +70,15 @@
         grid-template-rows: auto;
     }
     .list-view__price-col {
-        margin-left: 30px;
+        margin-left: 0;
     }
     .list-view__info-col .akb-polarity {
         display: flex;
         left: 83px;
+    }
+    .product__info-prices {
+        margin-left: -2px;
+        margin-top: 0;
     }
 }
 
@@ -285,7 +289,7 @@
         min-height: 20px;
     }
     .boxList {
-        width: 26.9%;
+        width: 43.6%;
     }
     .boxList2 {
         flex-wrap: nowrap;
@@ -351,7 +355,7 @@
     /*    background-image: url(../img/tyres_winter.png);*/
     /*}*/
     .boxList {
-        width: 20.333%;
+        width: 28.14%;
     }
     .selection .item {
         width: 17%;
@@ -378,7 +382,10 @@
         padding-top: 0;
     }
     .list-view__item {
-        grid-template-columns: auto 200px 180px;
+        grid-template-columns: auto 230px 180px;
+    }
+    .list-view__price-col {
+        margin-left: 30px;
     }
 }
 
@@ -447,6 +454,9 @@
         font-size: 10px;
     }
     .list-view__info-col .akb-polarity {
-        left: 160px;
+        left: 120px;
+    }
+    .boxList {
+        width: 28.6%;
     }
 }
