--- a/app/webroot/css/main-style.v4.css
+++ b/app/webroot/css/main-style.v4.css
@@ -718,7 +718,7 @@ input {
   display: flex;
   flex-direction: column;
 }
-.filter-group .item .item-inner .name {
+.filter-group .item .item-inner .name, .item-name {
   float: left;
   width: 115px;
   color: #000000;
@@ -744,11 +744,12 @@ input {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+  width: 100%;
 }
 .item-group .item-inner {
   width: 100%;
 }
-.filter-group .item-group .item-inner .name {
+.filter-group .item-group .item-inner .name, .item-name {
   width: 100%;
 }
 .sel-style1, .filter select {
@@ -4138,4 +4139,74 @@ table.withlines {
   /*max-width: 225px;*/
   /*max-height: 225px;*/
   margin: auto;
+}
+
+/* The container */
+.checkbox__container {
+  display: block;
+  position: relative;
+  padding-left: 27px;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-top: 5px;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox__container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #fff;
+  border: 1px solid #b5b5b5;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox__container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox__container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox__container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox__container .checkmark:after {
+  left: 8px;
+  top: 2px;
+  width: 3px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
