--- a/app/webroot/css/main-style-media.v4.css
+++ b/app/webroot/css/main-style-media.v4.css
@@ -177,7 +177,7 @@
         gap: 10px;
     }
     .bt-style1 {
-        display: block;
+        /*display: block;*/
         width: 100%;
         margin-left: auto;
         margin-right: auto;
