--- a/app/webroot/css/main-style-media.v4.css
+++ b/app/webroot/css/main-style-media.v4.css
@@ -313,8 +313,10 @@
     .car__sizes__wrap {
         flex-direction: row;
     }
-    .car__sizes img {
+    .car__sizes-right {
         max-width: 30%;
+    }
+    .car__sizes-right img {
         margin: 0;
     }
 }
