--- a/app/webroot/css/main-style.v4.css
+++ b/app/webroot/css/main-style.v4.css
@@ -3704,9 +3704,15 @@ table.withlines {
   gap: 30px;
   flex-wrap: wrap;
 }
-
-.car__sizes img {
+.car__sizes-right {
   max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: space-between;
+}
+.car__sizes-right img {
+  width: 100%;
   object-fit: contain;
   max-height: 120px;
   margin: auto;
@@ -4218,14 +4224,19 @@ table.withlines {
   pointer-events: none;
   cursor: progress;
 }
-.filter-reset {
+.filter-reset, .filter-reset-car {
   background: none;
   border: none;
   margin-bottom: 4px;
   margin-left: auto;
+}
+.filter-reset-car {
+  margin-top: 5px;
+}
+.filter-reset {
   display: none;
 }
-.filter-reset span {
+.filter-reset span, .filter-reset-car span {
   color: red;
   margin-left: 3px;
 }
