new header menu paths

--- a/app/webroot/css/main-style.v6.css
+++ b/app/webroot/css/main-style.v6.css
@@ -717,6 +717,7 @@ input {
 .filter-group .item .item-inner-et {
   display: flex;
   flex-direction: column;
+  padding-bottom: 0;
 }
 .filter-group .item .item-inner .name, .item-name {
   float: left;
