--- a/app/webroot/css/main-style-media.v6.css
+++ b/app/webroot/css/main-style-media.v6.css
@@ -313,8 +313,10 @@
     .car__sizes__wrap {
         flex-direction: row;
     }
-    .car__sizes img {
+    .car__sizes-right {
         max-width: 30%;
+    }
+    .car__sizes-right img {
         margin: 0;
     }
 }
@@ -382,7 +384,7 @@
         padding-top: 0;
     }
     .list-view__item {
-        grid-template-columns: auto 230px 180px;
+        grid-template-columns: auto 270px 180px;
     }
     .list-view__price-col {
         margin-left: 30px;
