--- a/app/webroot/css/main-style.v6.css
+++ b/app/webroot/css/main-style.v6.css
@@ -264,7 +264,7 @@ input {
   box-shadow: none;
 }
 .left-nav {
-  background-color: #f5f5f5;
+  background-color: #eee;
 
   .filter-group {
     display: none;
@@ -717,13 +717,14 @@ input {
 .filter-group .item .item-inner-et {
   display: flex;
   flex-direction: column;
+  padding-bottom: 0;
 }
-.filter-group .item .item-inner .name {
+.filter-group .item .item-inner .name, .item-name {
   float: left;
-  width: 115px;
-  color: #000000;
-  font-size: 14px;
-  padding-top: 7px;
+  color: #828282;
+  font-size: 12px;
+  /*padding-top: 7px;*/
+  margin-bottom: 3px;
 }
 #CarViewForm .item .item-inner .name {
   width: 115px !important;
@@ -740,15 +741,20 @@ input {
   align-items: center;
   gap: 5px;
 }
+.filter-group .item .item-inner .inp-et .item-inner {
+  width: 100%;
+}
 .item-group {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+  width: 100%;
 }
 .item-group .item-inner {
   width: 100%;
 }
-.filter-group .item-group .item-inner .name {
+
+.filter-group .item-group .item-inner .name, .item-name {
   width: 100%;
 }
 .sel-style1, .filter select {
@@ -789,9 +795,6 @@ input {
 }
 .filter-group .item.item2 {
 
-}
-.filter-group .item.item2 .item-inner .name {
-  width: 70px;
 }
 .filter-group .item .item-inner .checkbox {
   cursor: pointer;
@@ -3701,9 +3704,15 @@ table.withlines {
   gap: 30px;
   flex-wrap: wrap;
 }
-
-.car__sizes img {
+.car__sizes-right {
   max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: space-between;
+}
+.car__sizes-right img {
+  width: 100%;
   object-fit: contain;
   max-height: 120px;
   margin: auto;
@@ -3813,9 +3822,9 @@ table.withlines {
   margin: 0 0 0 50px !important;
 }
 .list-view__img-col .prodImg {
-  height: 230px;
-  max-height: 230px;
-  max-width: 230px;
+  height: 270px;
+  max-height: 270px;
+  max-width: 270px;
   width: 100%;
   display: grid;
   margin: auto;
@@ -3942,7 +3951,7 @@ table.withlines {
   padding: 3px 0;
   max-width: 202px;
   width: calc(100% + 2px);
-  margin-top: -30px;
+  margin-top: 10px;
   margin-bottom: 10px;
   border: 1px solid #40b252;
   border-radius: 20px;
@@ -4139,19 +4148,171 @@ table.withlines {
   /*max-height: 225px;*/
   margin: auto;
 }
-.desc-icons {
-  display: flex !important;
-  gap: 3px;
-  border: none;
-}
-.desc-icons .tyre__icons {
+
+/* The container */
+.checkbox__container {
+  display: flex;
   position: relative;
-  flex-direction: row;
+  padding-left: 27px;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 20px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-top: 5px;
+  white-space: nowrap;
 }
-.desc-icons .tyre__icons .tyre__icon-tyremount img {
-  width: 23px;
+
+/* Hide the browser's default checkbox */
+.checkbox__container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
-.desc-icons img, .desc-icons .tyre__icon {
+
+/* Create a custom checkbox */
+.checkbox__container .checkmark {
+  position: absolute;
+  height: 18px;
+  width: 18px;
+  background-color: #fff;
+  border: 1px solid #b5b5b5;
+}
+.checkbox__container-checkbox .checkmark {
+  top: 0;
+  left: 0;
+  border-radius: 4px;
+}
+
+.checkbox__container-radio .checkmark {
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+}
+
+
+/* On mouse-over, add a grey background color */
+.checkbox__container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox__container-checkbox input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+.checkbox__container-radio input:checked ~ .checkmark {
+  background-color: #000000;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox__container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox__container-checkbox .checkmark:after {
+  left: 7px;
+  top: 2px;
+  width: 3px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.checkbox__container-radio .checkmark:after {
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  top: 3px;
+  left: 3px;
+}
+.checkbox__container-reverse .checkmark {
+  right: 0;
+  left: auto;
+}
+.checkbox__container input:checked ~ .checkmark__akb:after {
+  background-image: url('/img/icons/plus.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  top: -2px;
+  right: -2px;
+  bottom: -2px;
+  left: -2px;
+  width: 24px;
+  height: 24px;
+}
+.checkbox__icon {
   width: 20px;
   height: 20px;
+  display: block;
+  margin-right: 4px;
+  margin-left: -2px;
+}
+.checkbox__container.small {
+  font-size: 13px;
+  padding-left: 22px;
+}
+.checkbox__container.small .checkmark {
+  height: 15px;
+  width: 15px;
+}
+.checkbox__container-radio.small .checkmark:after {
+  width: 10px;
+  height: 10px;
+  top: 2.5px;
+  left: 2.5px;
+}
+
+.checkbox__container.large {
+  line-height: 25px;
+}
+.checkbox__container.large .checkbox__icon {
+  width: 25px;
+  height: 25px;
+}
+.checkbox__container-radio.large .checkmark {
+  margin-top: 3.5px;
+}
+
+.is-loading .list-view__item, .is-loading .boxList {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: progress;
+}
+.filter-reset, .filter-reset-car {
+  background: none;
+  border: none;
+  margin-bottom: 4px;
+  margin-left: auto;
+}
+.filter-reset-car {
+  margin-top: 5px;
+}
+.filter-reset {
+  display: none;
+}
+.filter-reset span, .filter-reset-car span {
+  color: red;
+  margin-left: 3px;
+}
+.item-inner-space-around .item-group .item-inner {
+  width: auto;
+}
+.item-inner-m-0 .checkbox__container {
+  margin: 0;
 }
