--- a/app/webroot/css/main-style.v6.css
+++ b/app/webroot/css/main-style.v6.css
@@ -3959,6 +3959,19 @@ table.withlines {
   z-index: 1;
   align-self: center;
 }
+.list-view__flag-cell {
+  display: flex;
+  align-items: center;
+}
+.flag__icon {
+  width: 30px;
+  height: 20px;
+  display: inline-flex;
+  padding: 2px 0 2px 6px;
+}
+.flag__icon img {
+  border: 1px solid #cacaca;
+}
 .product__info__buy-group {
   display: flex;
   flex-direction: column;
