--- a/app/webroot/css/main-style.v9.css
+++ b/app/webroot/css/main-style.v9.css
@@ -297,7 +297,6 @@ input {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
   align-items: center;
 }
 .left-nav__switch__button {
@@ -756,6 +755,16 @@ input {
 
 .filter-group .item-group .item-inner .name, .item-name {
   width: 100%;
+}
+.item-group.vertical {
+  flex-direction: column;
+  gap: 0;
+}
+.item-group.vertical .item-inner {
+  padding-bottom: 10px;
+}
+.item-group.vertical .item-inner:last-child {
+  padding-bottom: 15px;
 }
 .sel-style1, .filter select {
   appearance: none;
@@ -4372,4 +4381,70 @@ table.withlines {
 }
 .item-inner-m-0 .checkbox__container {
   margin: 0;
+}
+
+.truck-switch {
+  background-color: #eee;
+  padding: 10px;
+  margin-bottom: 17px;
+  margin-top: 10px;
+}
+.truck-switch__items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+.truck-switch__item {
+  display: flex;
+  text-align: center;
+  gap: 10px;
+  font-size: 18px;
+  align-items: center;
+  padding: 5px;
+  border-radius: 10px;
+  overflow: hidden;
+  filter: grayscale(100%);
+  text-decoration: none;
+}
+.truck-switch__item:hover {
+  filter: none;
+}
+.truck-switch__item.active {
+  background-color: #ffffff;
+  border-bottom: 3px solid #4ca123;
+  filter: none;
+}
+.truck-switch__types {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 30px;
+  align-items: baseline;
+}
+.truck-switch__type {
+  display: flex;
+  flex-direction: column;
+  filter: grayscale(100%);
+  text-decoration: none;
+}
+.truck-switch__type:hover {
+  filter: none;
+}
+.truck-switch__type img {
+  object-fit: contain;
+}
+.truck-switch__type-title {
+  text-align: center;
+  margin-top: 5px;
+}
+.truck-switch__type.active {
+  filter: none;
+}
+.truck-switch__type.active .truck-switch__type-title {
+  padding: 3px 5px;
+  border-radius: 5px;
+  background-color: #40b252;
+  color: #ffffff;
 }
