--- a/app/webroot/css/main-style.v12.css
+++ b/app/webroot/css/main-style.v12.css
@@ -4462,3 +4462,8 @@ table.withlines {
   padding: 5px;
   border-radius: 10px;
 }
+
+.mode-selector__contact {
+  margin-top: 10px;
+  display: none;
+}
