--- a/app/webroot/css/main-style.v12.css
+++ b/app/webroot/css/main-style.v12.css
@@ -224,12 +224,24 @@ input {
   text-align: center;
   height: 47px;
   line-height: 47px;
+  position: relative;
 }
 #header #nav ul li.activ a {
   background-color: #fff;
   text-shadow: none;
   color: #000;
   width: 100%;
+}
+#header #nav ul li a:has(span) {
+  line-height: 33px;
+}
+#header #nav ul li a span {
+  position: absolute;
+  bottom: -6px;
+  right: 0;
+  left: 0;
+  font-size: 16px;
+  font-weight: 400;
 }
 #header #nav ul li:hover a {
   background-color: #3a7021;
