--- a/app/webroot/css/main-style.v12.css
+++ b/app/webroot/css/main-style.v12.css
@@ -1388,6 +1388,13 @@ a.btVer3:hover {
   height: 255px;
   min-height: 255px;
 }
+.prodImg-tubes {
+  /*max-width: 255px;*/
+  max-width: 180px;
+  height: 180px;
+  min-height: 180px;
+  margin-bottom: 0;
+}
 .prodImg img {
   width: 100%;
   height: 100%;
@@ -1482,6 +1489,11 @@ h3.title-tyres {
   white-space: nowrap;
   max-width: 100%;
 }
+h3.title-tubes {
+  text-align: left;
+  height: 40px;
+  white-space: normal;
+}
 h3.title-tyres a {
   text-decoration: none;
 }
@@ -1516,6 +1528,11 @@ h3.title-tyres a:hover {
 }
 .boxList.disks {
   height: 350px;
+  padding-top: 8px;
+  text-align: center;
+}
+.boxList.tubes {
+  height: 300px;
   padding-top: 8px;
   text-align: center;
 }
@@ -1909,6 +1926,9 @@ h3.title-tyres a:hover {
   align-items: center;
   transition: all 0.3s ease-in-out;
 }
+.buy-button-tubes {
+  align-items: center;
+}
 .select-namber a {
   background-color: #ececec;
   background-image: url("../img/bg-plus.gif");
@@ -2050,6 +2070,7 @@ border: 1px solid #cccccc;
 }
 .cart-prod .img img {
 display: block;
+  width: 100%;
 }
 .cart-prod.total-cart .img {
 border: 0;
@@ -3665,6 +3686,7 @@ table.withlines {
   max-height: 80vh;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 }
 .popup__wrapper.lg {
   width: 900px;
