--- a/app/webroot/css/main-style.v14.css
+++ b/app/webroot/css/main-style.v14.css
@@ -112,6 +112,7 @@ input {
   line-height: 35px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 #header .info-group .desc .desc-description {
   font-size: 22px;
@@ -119,6 +120,13 @@ input {
   text-transform: inherit;
   line-height: 20px;
   padding-top: 6px;
+}
+#header .info-group .desc .new-year-hat {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: -10px;
+  right: -23px;
 }
 #header .info-group .info {
   display: none;
@@ -149,6 +157,10 @@ input {
   height: 34px;
   width: 47px;
   background-position: center;
+}
+#header .new-year-cart button {
+  background: url("../img/holidays/new-year/new-year-cart.png") no-repeat scroll 5px 1px;
+  background-size: contain;
 }
 #header .cart button:hover {
 }
@@ -197,6 +209,12 @@ input {
   align-items: center;
 }
 .header-background {
+  display: none;
+}
+.header-new-year-background {
+  display: none;
+}
+.header-new-year-toys {
   display: none;
 }
 .header-toggle {
