--- a/app/webroot/css/main-style-media.v16.css
+++ b/app/webroot/css/main-style-media.v16.css
@@ -409,6 +409,9 @@
     .list-view__price-col {
         margin-left: 30px;
     }
+    .tooltip-places__prefix {
+        display: contents;
+    }
 }
 
 @media screen and (min-width: 1320px) {
