--- a/app/webroot/css/main-style-media.v17.css
+++ b/app/webroot/css/main-style-media.v17.css
@@ -322,6 +322,15 @@
     .mode-selector__contact {
         display: block;
     }
+
+    #header .info-group .desc .women-flowers {
+        display: block;
+        position: absolute;
+        width: 300px;
+        height: 98px;
+        top: -68px;
+        left: 320px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -345,7 +354,6 @@
         position: absolute;
         right: -32px;
         bottom: 0;
-        z-index: -1;
         height: 109px;
         width: 337px;
     }
@@ -411,6 +419,11 @@
     }
     .tooltip-places__prefix {
         display: contents;
+    }
+
+    #header .info-group .desc .women-flowers {
+        top: -65px;
+        left: 390px;
     }
 }
 
@@ -490,5 +503,16 @@
     }
     .boxList.tubes {
         width: 20.1%;
+    }
+}
+
+@media screen and (min-width: 1550px) {
+    .header-women-flowers {
+        position: absolute;
+        display: block;
+        top: 55px;
+        right: -130px;
+        width: 120px;
+        height: 145px;
     }
 }
