--- a/app/webroot/css/main-style.v17.css
+++ b/app/webroot/css/main-style.v17.css
@@ -128,6 +128,9 @@ input {
   top: -10px;
   right: -23px;
 }
+#header .info-group .desc .women-flowers {
+  display: none;
+}
 #header .info-group .info {
   display: none;
   float: left;
@@ -210,8 +213,12 @@ input {
 }
 .header-background {
   display: none;
+  z-index: 1;
 }
 .header-new-year-toys {
+  display: none;
+}
+.header-women-flowers {
   display: none;
 }
 .header-toggle {
@@ -220,6 +227,8 @@ input {
 }
 .toggle__menu {
   display: none;
+  z-index: 2;
+  position: relative;
 }
 .toggle__menu-open {
   display: flex;
