8 march holiday banners

--- a/app/webroot/css/main-style.v18.css
+++ b/app/webroot/css/main-style.v18.css
@@ -131,6 +131,9 @@ input {
 #header .info-group .desc .women-flowers {
   display: none;
 }
+#header .info-group .desc .women-text {
+  display: none;
+}
 #header .info-group .info {
   display: none;
   float: left;
