--- a/app/webroot/css/main-style-media.v18.css
+++ b/app/webroot/css/main-style-media.v18.css
@@ -425,6 +425,14 @@
         top: -65px;
         left: 390px;
     }
+
+    #header .info-group .desc .women-text {
+        display: block;
+        position: absolute;
+        top: -40px;
+        right: 0;
+        height: 40px;
+    }
 }
 
 @media screen and (min-width: 1320px) {
