--- a/app/webroot/css/main-style-media.v19.css
+++ b/app/webroot/css/main-style-media.v19.css
@@ -429,9 +429,12 @@
     #header .info-group .desc .women-text {
         display: block;
         position: absolute;
-        top: -40px;
+        top: -44px;
         right: 0;
-        height: 40px;
+        height: 45px;
+        width: 100%;
+        object-fit: contain;
+        object-position: center;
     }
 }
 
